# docker-images

./: .gitignore  README.md
airflow/: Dockerfile  entrypoint.sh  readme  readme.md
clock/: Dockerfile  clock.sh  readme.md
hello-world/: Dockerfile  entrypoint.sh  readme.md  template.tpl
leanpub/: .ash_history  Dockerfile  entrypoint.sh  jekyll-theme-nucky-2021.1.gem  readme.md  tasks.py  todo.md
leanpub/jekyll-theme-nucky/: LICENSE.txt  README.md  jekyll-theme-nucky.gemspec
leanpub/jekyll-theme-nucky/_includes/: countdown.html  footer.2019.html  google.analytics.html  lecturer.intro.html  mathjax.html  slides_frontpage.html  video.html
leanpub/jekyll-theme-nucky/_layouts/: default.2019.html  default.html  labs.html  lecture.2019.html  lecture.html  outline.html  page.html  post.html  problemset.html  slides.html
leanpub/jekyll-theme-nucky/assets/css/: theme.2019.css
leanpub/jekyll-theme-nucky/assets/js/: labs.js
leanpub/pandoc/defaults/: epub-labs.yaml  epub-lectures.yaml  pdf-lectures.yaml
leanpub/pandoc/filters/: alerts.py  images-counter.py  number-tasks.py
leanpub/pandoc/j2_templates/: epub-imprint.html  epub-lecture.html  epub-page.html  lecture.html
leanpub/pandoc/styles/: blitz.css  bootstrap-icons.css  epub.css
leanpub/pandoc/templates/: epub-coverpage.html  epub-imprint.html  epub-lectures.html  epub-titlepage.html  pdf-lectures.tex
leanpub/texmf/tex/latex/tuke/: kitextbook.cls
matrix/: Dockerfile  readme.md
mini/: Dockerfile  readme.md
rambo/: Dockerfile.1  Dockerfile.2  Dockerfile.3  Dockerfile.4  Dockerfile.5  index.1.html  index.2.html  index.html  nginx.conf.template  readme.md
rambo-fa/: Dockerfile  Dockerfile.distroless  Dockerfile.slim  entrypoint.bash  pyproject.toml  readme.md
rambo-fa/rambo/: __main__.py  app.py  db.json  dependencies.py  helpers.py  j2_filters.py  middleware.py
rambo-fa/rambo/models/: rambo.py  settings.py
rambo-fa/rambo/static/: quotes.json
rambo-fa/rambo/static/js/: tailwind.min.js
rambo-fa/rambo/templates/: index.html
rambo-fa/rambo/views/: api.py  data.py  homepage.py
rambo/css/: rambo.1.css  rambo.3.css
rambo/rambo/: main.py
toolbox/: Dockerfile  bashrc  readme.md  vimrc
weather/: .gitignore  Dockerfile  Dockerfile.distroless  docker-compose.yaml  pyproject.toml  readme.md  todo.md
weather/weather/: __init__.py  __main__.py  app.old.py  app.py  dependencies.py  middleware.py  models.py  views.py
weather/weather/models/: measurement.py  settings.py  weather.py
weather/weather/static/css/: style.css
weather/weather/templates/: base.html  current.weather.html  homepage.html  plain.html
