[tool.poetry]
name = "rambo"
version = "2024.6"
description = "Simple RAMBO image for my Docker and Kubernetes trainings."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.10.4"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
pendulum = "^3.0.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
