[tool.poetry]
name = "weather"
version = "1.0.0"
description = "Simple weather checker as simple app example for Docker 101 course."
authors = ["mirek <mirek@cnl.sk>"]
keywords = [
    "weather",
    "openweathermap.org"
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather.app:main"