[tool.poetry]
name = "weather"
version = "2023.01"
description = "Simple weather checker as simple app example for Docker 101 course."
authors = [
    "mirek <mirek@cnl.sk>"
]
keywords = [
    "weather",
    "openweathermap.org"
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
loguru = "^0.6.0"
fastapi = "^0.87.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.19.0"
jinja2 = "^3.1.2"
sqlmodel = "^0.0.8"
fastapi-health = "^0.4.0"
pendulum = "^2.1.2"
sqladmin = "^0.8.0"
httpie = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
black = "^22.6.0"
litecli = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather.app:main"
