[tool.poetry]
name = "weather"
version = "2024.4"
description = "Simple weather checker as simple app example for Docker 101 course."
authors = [
    "mirek <mirek@cnl.sk>"
]
keywords = [
    "weather",
    "openweathermap.org"
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pendulum = "3.0.0"
sqladmin = "^0.16.0"
fastapi-health = "^0.4.0"
fastapi-restful = "^0.5.0"
sqlmodel = "^0.0.16"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pydantic-core = "^2.18.2"
jinja2 = "^3.1.2"
loguru = "^0.7.2"
typing-inspect = "^0.9.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
ruff = "^0.1.7"
litecli = "^1.10.0"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#weather = "weather.app:main"
